fix padding alignment issue

--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -1,7 +1,8 @@
 .navigation__container {
     background-color: rgb(233, 233, 233);
     background-color: rgb(233, 233, 233);
-    padding: 1.5rem;
+    // padding: 1.5rem;
+    padding: 1rem 2rem;
     display: flex;
 }
 
@@ -28,6 +29,7 @@
         font-size: 1.1rem;
         font-weight: 500;
         cursor: pointer;
+        // position:fixed;
 
         &:last-child {
             margin-right: 3rem;
@@ -43,7 +45,7 @@
     &__logo {
         align-self: center;
         margin-right: auto;
-        margin-left: 3rem;
+        // margin-left: 3rem;
         font-weight: bold;
         color: steelblue;
     }
